mychart/templates/auth/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth/register
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8090
          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8090
